<resources>
    <string name="app_name">lab02ex02</string>
    <string name="_0">0</string>
    <string name="choose_toppings">Choose Toppings:</string>
    <string name="subtraction">-</string>
    <string name="quantity">Quantity:</string>
    <string name="cream">Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="max_quantity_reached">Max Quantity Reached</string>
    <string name="logo_image">Logo image</string>
    <string name="plus_sign">+</string>
    <string name="order">Order</string>
    <string name="order_summary">Order Summary:</string>
    <string name="Order_printout">Added whipped cream? \tNo Added chocolate? \t\t\t\t\t\t\tNo Quantity: \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t0  Price: $0.00 THANK YOU!</string>
</resources>
